name:                lang
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
copyright:           2015, Iavor S. Diatchki
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     AST,
                       Parser, ParserUtils,
                       Lexer, LexerUtils,
                       Check,
                       Quoter
  hs-source-dirs:      src
  other-extensions:    CPP
  build-depends:       base, array, template-haskell
  build-tools:         alex, happy
  default-language:    Haskell2010

executable lang
  main-is:             Test.hs
  build-depends:       base, lang, pretty-show
  default-language:    Haskell2010



